# Data_Structures_Visualization

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Using SFML and CMakeLists.txt for HeapVisual.docx  agents.md  makefile  matrix.txt  report.md
Graph/: CMakeLists.txt  Graph_app.cpp  README.md
Graph/include/: Algorithms.h
Graph/include/UI/: InputHandler.h  Visualizer.h
Graph/include/core/: App.h  Graph.h
Graph/include/model/: Edge.h  Vertex.h
Graph/src/: Algorithms.cpp
Graph/src/UI/: InputHandler.cpp  Visualizer.cpp
Graph/src/core/: Graph.cpp
Heap/: CMakeLists.txt  Heap_app.cpp
Heap/HeapController/: CMakeLists.txt  HeapController.cpp
Heap/include/: AnimationPlayer.hpp  Design.hpp  Heap.hpp  HeapRenderer.hpp  UI.hpp
Heap/src/: AnimationPlayer.cpp  Heap.cpp  HeapController.cpp  HeapRenderer.cpp  UI.cpp
HeapController/: HeapController.cpp  HeapController.hpp
Linked-List/: CMakeLists.txt  LinkedList_app.cpp
Linked-List/include/: Design.hpp  LinkedList.hpp
Linked-List/src/: Animation.cpp  LinkedListCommand.cpp
LinkedList/: CMakeLists.txt
LinkedList/include/: LinkedList.hpp
LinkedList/src/: LinkedList.cpp
LinkedListCommand/: CMakeLists.txt  LinkedListCommand.cpp  LinkedListCommand.hpp
VisualApp/: AnimationPlayer.cpp  AnimationPlayer.hpp  CMakeLists.txt  Design.hpp  HeapRenderer.cpp  HeapRenderer.hpp  UI.cpp  UI.hpp  main.cpp
Visualization/: Animation.hpp  CMakeLists.txt  Design.hpp  LinkedListRenderer.cpp  LinkedListRenderer.hpp  UI.cpp  UI.hpp  data.txt  main.cpp
assets/: MyColors.h
include/: Algorithms.h  App.h  Graph.h  InputHandler.h  Sidepeak.h  Visualizer.h  raygui.h
include/AVLTreeVisualization/: VisualizeAVLTree.h
include/AVLTreeVisualization/Items/: Items.h
include/AVLTreeVisualization/Scenes/: DeleteAVLTreeScene.h  DrawLastAVLTree.h  InitialAVLTreeScene.h  InsertAVLTreeScene.h  InsertDataScene.h
include/DrawTextures/: DrawObjects.h
include/Drawing/: DrawPicture.h  DrawText.h
include/FastMathFunctions/: MathFunctions.h
include/SceneManager/: ModifyScreenScale.h  SceneManager.h
include/SceneManager/Scenes/: ChooseDataScene.h  StartingScene.h
include/SceneManager/SnapShots/: SnapShots.h
include/Textures/: Textures.h
include/Tree/: AVLTree.h
include/UI/: Sidepeak.h
include/core/: App.h  Graph.h
include/snapshots/: snapshots.h
src/: Algorithms.cpp  App.cpp  Edge.cpp  Graph.cpp  InputHandler.cpp  Sidepeak.cpp  Vertex.cpp  Visualizer.cpp  main.cpp  raygui.h
src/AVLTreeVisualization/: VisualizeAVLTree.cpp
src/AVLTreeVisualization/Scenes/: DeleteAVLTreeScene.cpp  DrawLastAVLTree.cpp  InitialAVLTreeScene.cpp  InsertAVLTreeScene.cpp
src/DrawTextures/: DrawObjects.cpp
src/Drawing/: DrawPicture.cpp  DrawText.cpp
src/FastMathFunctions/: MathFunctions.cpp
src/Logic/: Algorithms.cpp  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
src/SceneManager/: ModifyScreenScale.cpp  SceneManager.cpp
src/SceneManager/Scenes/: ChooseDataScene.cpp  StartingScene.cpp
src/SceneManager/SnapShots/: SnapShots.cpp
src/Textures/: Textures.cpp
src/Tree/: AVLTree.cpp
src/UI/: InputHandler.cpp  InputHandler.h  Sidepeak.cpp  Visualizer.cpp
src/core/: App.cpp  App.h  Graph.cpp
src/model/: Edge.cpp  Vertex.cpp
src/snapshots/: snapshots.cpp
